# libgt

./: CMakeLists.txt  README.md
header-guards/: Makefile  testmain  testmain.c  util.c  util.h
input/: line_with_char  number.txt  task1-input  task2-input  task3-input  task4-input
libs/dynamic/: inf.yml
libs/dynamic/dlib/: dlib.c  dlib.h
libs/dynamic/dlib_driver/: main.c
libs/static/: inf.yml
libs/static/slib/: slib.c
libs/static/slib_driver/: main  main.c
profiling/: gmon.out  inf.yml  main  main.c
src/: gtc.c  gtcc.cpp  shift.c
src/bits/: bit_field_main.c  bit_manup_main.c  pack_data_main.c
src/c/bits/: bin_to_dec.c  dec_to_bin.c  set_read_bits_main.c
src/c/control-flow/: inf.yml  setjmp_longjmp_main.c
src/c/data-types/: VLA_main.c  complex_numbers_main.c  designated_initializer_main.c  inf.yml  typedef_main.c
src/c/data-types/abstact-dt/: linked_list_int_main.c  queue_int_main_ll_impl.c  stack_int_array_main.c
src/c/exercist/: arrows.c  binary_gap.c  binarygap.c  count_div.c  cyclicRotation.c  cyclic_rotation.c  frog_jump.c  frog_river_one.c  genomic_range_query.c  max_counters.c  min_avg_two_slice.c  missingInteger.c  missing_integer.c  oddOccurrencesInArray.c  odd_occurrences_in_array.c  passing_cars.c  passwd.c  perm_check.c  perm_missing_elem.c  printTriangle.c  print_int_array.c  print_triangle.c  reverse_int_array.c  siemens1.c  siemens2.c  siemens3.c  siemens4.c  tape_equilibrium.c  task1.c  task2.c  task3.c  task4.c
src/c/exercist/sorting/: insertion_sort.c  insertion_sort.cpp  merge_sort.cpp
src/c/head-tail-problem/: heads_tails.c
src/c/interprocess-communication/: alarm_example_main.c  fork_example2_main.c  fork_example_main.c  processes_example_main.c  sigaction_handle_example2_main.c  signal_example_main.c  signal_handle_example2_main.c  signal_handle_example_main.c
src/c/io/: char_functions_main.c  fgets_sscanf_main.c  formatting_functions_main.c  inf.yml  line_with_char_main.c  reverse_string_main.c  strtol_fgets_main.c  tokenize_main.c  upper_lower_case_main.c
src/c/io/str/: str_concat.c  str_rev.c  str_sort.c
src/c/libs/: dlib.h  dlib_driver.c  dynamic_library.yml  dynamic_loading.c  inf.yml  slib.c  slib.h  str_functions.c
src/c/libs/c-libs/: assert_inf.yml  assert_main.c  string.h_inf.yml  time.h_inf.yml
src/c/math-ops/: gcd_main.c  is_prime.c
src/c/networking/: client_main.c
src/c/preprocessor/: preprocessor_main.c
src/c/ptr/: function_pointer_main.c
src/c/reusable_samples/: length_of_a_char_array.c  length_of_an_integer.c
src/c/storage-classes/: inf.yml
src/c/threads/: thread_cond_variables_main.c  thread_deadlock_main.c  thread_example1_main.c  thread_mutex_create_lock_unlock2_main.c  thread_pass_mult_args_main.c
src/c/type-qualifiers/: inf.yml
src/control-flow/: error_recovery_main.c  null_statement_main.c  variadic_func_main.c
src/cpp/basics/: arrays.cpp  bufferissue.cpp  range_based_for_loop.cpp  streams.cpp  using_namespace.cpp  variables.cpp  vectors.cpp
src/cpp/chars-strings/: c_char_string.cpp  cpp_char_string.cpp
src/cpp/exercist/: reverse_string.cpp
src/cpp/functions/: default_arguments.cpp  function_overloading.cpp  pass_by_reference.cpp  passing_array_to_function.cpp  random_f.cpp
src/cpp/misc/: stringpyramid.cpp
src/cpp/oop/: const_with_classes.cpp  deep_copy.cpp  friends_of_a_class.cpp  move_constructor.cpp  shallow_copy.cpp  static_class_members.cpp  structs.cpp  this_pointer.cpp
src/cpp/oop/Player/: Player.cpp  Player.h  player_main.cpp
src/cpp/oop/movies/: Movie.cpp  Movie.h  Movies.cpp  Movies.h  movies_main.cpp
src/cpp/pointers/: dynamic_memory_allocation.cpp  reference_in_range_based_loop.cpp
src/data-types/: structs_main.c  union_main.c
src/data-types/abstact-dt/: binary_tree_int_main.c  inf.yml  linked_list_char_main.c  queue_int_main_array_impl.c  stack_int_pointer_main.c
src/debugging/: inf.yml
src/interprocess-communication/: fork_example3_main.c  fork_example4_main.c  inf.yml  rasie_catch_alarm_signal_main.c  sigaction_handle_example_main.c
src/io/: line_char_count_main.c  reverse_string_rec.c  str_ops_main.c  string_functions_main.c
src/io/str/: has_ch.c  str_cmp.c  str_len.c
src/libs/: dlib.c  dynamic_loading.c  lib_string_driver.c  slib_driver.c  static_library.yml  str_functions.h
src/libs/c-libs/: exit_atexit_main.c  memcpy_memmove_main.c  qsort_main.c  stdlib.h_inf.yml  strdup_strndup_main.c  time_funcs_main.c
src/math-ops/: inf.yml  is_even.c  is_odd.c  number_classification_main.c  prime_finder_main.c  variadic_avg.c  variadic_main.c
src/networking/: inf.yml  server_main.c
src/preprocessor/: macros_main.c  preprocessor_main.c
src/print-shape/: print_triange_main.c
src/ptr/: check_for_p_pos_main.c  inf.yml  pointer_main.c
src/rng/: rng_main.c
src/storage-classes/: extern_func.c  extern_main.c  register_main.c  static_main.c
src/threads/: inf.yml  thread_cancel_main.c  thread_detach_main.c  thread_get_set_stacksize_main.c  thread_mix_example_main.c  thread_mutex_create_lock_unlock_main.c  thread_pass_args_main.c  thread_pthread_self_main.c  thread_return_val_main.c
src/tictactoe/: tictactoe_main.c
