cmake_minimum_required(VERSION 3.21)
project(libgt C)

set(CMAKE_C_STANDARD 99)

add_executable(rng src/rng/rng_main.c)
add_executable(prime_finder src/math-ops/prime_finder_main.c)
add_executable(gcd src/math-ops/gcd_main.c)
add_executable(tictactoe src/tictactoe/tictactoe_main.c)
add_executable(tokenize src/io/tokenize_main.c)
add_executable(str_ops src/io/str_ops_main.c src/io/str/str_len.c src/io/str/str_concat.c src/io/str/str_cmp.c src/io/str/str_rev.c src/io/str/str_sort.c)
add_executable(strtol_fgets src/io/strtol_fgets_main.c)
add_executable(structs src/data-types/structs_main.c)
add_executable(print_triangle src/print-shape/print_triange_main.c)
add_executable(static src/storage-classes/static_main.c)
add_executable(extern src/storage-classes/extern_main.c src/storage-classes/extern_func.c)
add_executable(register src/storage-classes/register_main.c)
add_executable(typedef src/data-types/typedef_main.c)
add_executable(VLA src/data-types/VLA_main.c)
add_executable(complex_numbers src/data-types/complex_numbers_main.c)
add_executable(designated_initializer src/data-types/designated_initializer_main.c)

add_executable(bit_manup src/bits/bit_manup_main.c src/bits/bin_to_dec.c src/bits/dec_to_bin.c)
target_link_libraries(bit_manup m)

add_executable(set_read_bits src/bits/set_read_bits_main.c src/bits/dec_to_bin.c)
add_executable(fgets_sscanf src/io/fgets_sscanf_main.c)
add_executable(bit_field src/bits/bit_field_main.c)
add_executable(pack_data src/bits/pack_data_main.c)
add_executable(setjmp_longjmp src/control-flow/setjmp_longjmp_main.c)
add_executable(error_recovery src/control-flow/error_recovery_main.c)
add_executable(char_functions src/io/char_functions_main.c)
add_executable(string_functions src/io/string_functions_main.c)
add_executable(formatting_functions src/io/formatting_functions_main.c)
add_executable(line_char_count src/io/line_char_count_main.c)
add_executable(upper_lower_case src/io/upper_lower_case_main.c)
add_executable(line_with_char src/io/line_with_char_main.c src/io/str/has_ch.c)
add_executable(number_classification src/math-ops/number_classification_main.c src/math-ops/is_prime.c src/math-ops/is_odd.c)
add_executable(variadic_avg src/math-ops/variadic_main.c src/math-ops/variadic_avg.c)
add_executable(reverse_string_rec src/io/reverse_string_main.c src/io/reverse_string_rec.c)
add_executable(union src/data-types/union_main.c)
add_executable(preprocessor src/preprocessor/preprocessor_main.c)
add_executable(macros src/preprocessor/macros_main.c)
add_executable(pointer src/ptr/pointer_main.c)
add_executable(function_pointer src/ptr/function_pointer_main.c)

add_library(slib STATIC src/libs/slib.c src/libs/slib.h)
add_executable(slib_driver src/libs/slib_driver.c)
target_link_libraries(slib_driver slib)

add_executable(check_for_p_pos src/ptr/check_for_p_pos_main.c)

# str_functions library STATIC compiled
add_library(str_functions_s STATIC src/libs/str_functions.c src/libs/str_functions.h)
add_executable(lib_string_driver src/libs/lib_string_driver.c)
target_link_libraries(lib_string_driver str_functions)

add_library(dlib SHARED src/libs/dlib.c src/libs/dlib.h)
add_executable(dlib_driver src/libs/dlib_driver.c)
target_link_libraries(dlib_driver dlib)

# str_functions library SHARED compiled (used in dynamic loading)
add_library(str_functions_d SHARED src/libs/str_functions.c src/libs/str_functions.h)

add_executable(dynamic_loading src/libs/dynamic_loading.c)
target_link_libraries(dynamic_loading dl)

add_executable(assert src/libs/c-libs/assert_main.c)
target_link_libraries(assert m)

add_executable(exit_atexit src/libs/c-libs/exit_atexit_main.c)
add_executable(qsort src/libs/c-libs/qsort_main.c)

add_executable(memcpy_memmove src/libs/c-libs/memcpy_memmove_main.c)
add_executable(strdup_strndup src/libs/c-libs/strdup_strndup_main.c)
add_executable(time_funcs src/libs/c-libs/time_funcs_main.c)
add_executable(linked_list_char src/data-types/abstact-dt/linked_list_char_main.c)
add_executable(null_statement src/control-flow/null_statement_main.c)
add_executable(linked_list_int src/data-types/abstact-dt/linked_list_int_main.c)
add_executable(variadic_func_main src/control-flow/variadic_func_main.c)
add_executable(heads_tails src/head-tail-problem/heads_tails.c)
add_executable(stack_int_pointer src/data-types/abstact-dt/stack_int_pointer_main.c)
add_executable(stack_int_array src/data-types/abstact-dt/stack_int_array_main.c)
add_executable(queue_int_ll src/data-types/abstact-dt/queue_int_main_ll_impl.c)
add_executable(queue_int_arr src/data-types/abstact-dt/queue_int_main_array_impl.c)
add_executable(binary_tree_int src/data-types/abstact-dt/binary_tree_int_main.c)
add_executable(processes_example src/interprocess-communication/processes_example_main.c)
add_executable(signal_example src/interprocess-communication/signal_example_main.c)
add_executable(alarm_example src/interprocess-communication/alarm_example_main.c)
add_executable(signal_handle_example src/interprocess-communication/signal_handle_example_main.c)
add_executable(signal_handle_example2 src/interprocess-communication/signal_handle_example2_main.c)
add_executable(sigaction_handle_example src/interprocess-communication/sigaction_handle_example_main.c)
add_executable(sigaction_handle_example2 src/interprocess-communication/sigaction_handle_example2_main.c)
add_executable(fork_example src/interprocess-communication/fork_example_main.c)
add_executable(fork_example2 src/interprocess-communication/fork_example2_main.c)
add_executable(fork_example3 src/interprocess-communication/fork_example3_main.c)
add_executable(raise_catch_alarm_signal src/interprocess-communication/rasie_catch_alarm_signal_main.c)
add_executable(fork_example4 src/interprocess-communication/fork_example4_main.c)
add_executable(thread_example1 src/threads/thread_example1_main.c)
target_link_libraries(thread_example1 pthread)
add_executable(thread_pass_args src/threads/thread_pass_args_main.c)
target_link_libraries(thread_pass_args pthread)
add_executable(thread_pass_mult_args src/threads/thread_pass_mult_args_main.c)
target_link_libraries(thread_pass_mult_args pthread)
add_executable(thread_return_val src/threads/thread_return_val_main.c)
target_link_libraries(thread_return_val pthread)
add_executable(thread_pthread_self src/threads/thread_pthread_self_main.c)
target_link_libraries(thread_pthread_self pthread)
add_executable(thread_detach src/threads/thread_detach_main.c)
target_link_libraries(thread_detach pthread)
add_executable(thread_get_set_stacksize src/threads/thread_get_set_stacksize_main.c)
target_link_libraries(thread_get_set_stacksize pthread)
add_executable(thread_cancel src/threads/thread_cancel_main.c)
target_link_libraries(thread_cancel pthread)
add_executable(thread_mutex_create_lock_unlock src/threads/thread_mutex_create_lock_unlock_main.c)
target_link_libraries(thread_mutex_create_lock_unlock pthread)
add_executable(thread_mutex_create_lock_unlock2 src/threads/thread_mutex_create_lock_unlock2_main.c)
target_link_libraries(thread_mutex_create_lock_unlock2 pthread)
add_executable(thread_deadlock src/threads/thread_deadlock_main.c)
target_link_libraries(thread_deadlock pthread)
add_executable(thread_cond_variables src/threads/thread_cond_variables_main.c)
target_link_libraries(thread_cond_variables pthread)
add_executable(thread_mix_example src/threads/thread_mix_example_main.c)
target_link_libraries(thread_mix_example pthread)
add_executable(server src/networking/server_main.c)
add_executable(client src/networking/client_main.c)

add_executable(shift src/shift.c)
